--- a/style.css
+++ b/style.css
@@ -304,13 +304,12 @@ li a:hover::before {
 }
 
 .modele-box {
-  position: absolute;
+  
   display: flex;
   flex-direction: column;
-  top: 15rem;
-  left: 8rem;
-  height: 300px;
-  width: 400px;
+  margin-top: 15rem;
+  margin-left: 8rem;
+  max-width: 600px;
 }
 
 .btn1,
@@ -829,25 +828,29 @@ li a::before{
   }
 
   .carousel .title {
-    font-size: 5rem;
-    margin: 15rem 0 0 1.5rem;
+    font-size: 4.5rem;
+    margin: 9rem 0 0 5%;
   }
 
   .carousel .sub-title {
-    font-size: 1.5rem;
-    margin: .5rem 1.5rem;
+    font-size: 1.3rem;
+    margin: .5rem 5%;
   }
   .btn-sec {
-    margin-left: 1.5rem;
+    margin-left: 5%;
   }
 
   .details-sec {
     padding: 0 1.5rem;
   }
   .modele-box {
-  position: relative;
-  top: 85%;
-  margin: auto;
+    max-width: 20%;
+  margin: 43rem auto;
+  }
+  .title-btn {
+    font-size: 1.5rem;
+    margin: .5rem;
+    padding: 0;
   }
 
   /*URUS PAGE */
