--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
   padding: 2.5rem 0;
 }
 .drop-menu li a {
-  margin-left: 8.5rem;
+  margin-left: 7.7rem;
   padding-bottom: 0;
 }
 
@@ -304,12 +304,11 @@ li a:hover::before {
 }
 
 .modele-box {
-  
   display: flex;
   flex-direction: column;
   margin-top: 15rem;
   margin-left: 8rem;
-  max-width: 600px;
+  max-width: 100%;
 }
 
 .btn1,
@@ -533,22 +532,24 @@ li a:hover::before {
   margin-top: 3rem;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
-.background-text h2 {
+.carousel-sec h2 {
   font-size: 25rem;
   text-transform: uppercase;
   color: rgba(114, 114, 114, 0.165);
   margin-top: 4rem;
   z-index: 1;
+
+}
+.carousel-sec {
+  height: auto;
 }
 
 .carousel-auto {
   margin-left: 40rem;
   margin-top: -30rem;
   z-index: 2;
-  height: 40em;
   display: flex;
 }
 
@@ -556,7 +557,7 @@ li a:hover::before {
   display: none;
   top: 1rem;
   min-width: 950px;
-  height: auto;
+  height: 500px;
   padding-top: 0.9rem;
 }
 
@@ -564,7 +565,7 @@ li a:hover::before {
   display: none;
   top: 1rem;
   min-width: 950px;
-  height: auto;
+  height:500px;
   padding-bottom: 2.9rem;
   padding-left: 1.2rem;
 }
@@ -594,7 +595,6 @@ li a:hover::before {
   border-bottom: 1.5px solid rgb(228, 228, 228);
   width: 400px;
   margin-top: -10rem;
-  padding: 1rem;
 }
 
 .model-text1,
@@ -844,15 +844,19 @@ li a::before{
     padding: 0 1.5rem;
   }
   .modele-box {
-    max-width: 20%;
+    width: 250px;
     margin: 75vh auto; 
-  
     padding-bottom: 2rem;
+  }
+  .indicators-btn{
+    text-align: center;
+    width: 50%;
   }
   .title-btn {
     font-size: 1.5rem;
     margin: .5rem;
     padding: 0;
+    text-align: center;
   }
 
   /*URUS PAGE */
@@ -917,40 +921,32 @@ li a::before{
   .text-sec h3 {
     font-size: 1.5rem;
   }
-
   .text-sec p {
     font-size: 1rem;
     font-weight: 300;
     line-height: 1.7rem;
   }
-
   .title h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     margin-left: 0;
   }
-
-  .background-text h2 {
-    font-size: 15rem;
+  .carousel-sec h2 {
+  display: none;
   }
-  .controls{
-    display: flex;
-
-  }
-  .controls button {
-    justify-content: space-between;
-  }
-
   .carousel-auto {
     margin-left: 0;
-    margin-top: -22rem;
+    margin-top: 5rem;
   }
-
   .models-container {
     margin-top: 1rem;
+    height: 80%;
   }
-
+  .controls {
+    margin-top: 1.5rem;
+  }
   .model-car {
     width: 270px;
+    margin-bottom: 3rem;
   }
 
   .model-car h4 {
@@ -959,7 +955,9 @@ li a::before{
 
   .carousel-auto .car1,
   .carousel-auto .car2 {
-    min-width: 100px;
+    min-width: 250px;
+    margin-top: -5rem;
+
   }
   .footer-sec {
     height: 80px;
@@ -1027,7 +1025,7 @@ li a::before{
     margin-top: -8rem;
   }
 
-  .background-text h2 {
+  .carousel-sec h2 {
     font-size: 20rem;
     margin-top: 2rem;
   }
